--- a/views/send.pug
+++ b/views/send.pug
@@ -3,8 +3,9 @@ extends layout
 block content
     form(action='/send' method='POST')
         div    balance: #{balance}
-        input(name='exportKey' type='hidden' value=123 + 321)
-        div
+    input(name='zaddr' type='hidde' value=zaddr)
+    input(name='zkey' type='hidde' value=zkey)
+    div
             span from
             input(name='address')
         div
