--- a/views/send.pug
+++ b/views/send.pug
@@ -10,5 +10,5 @@ block content
             input(name='to')
         div
             span amount
-            input(type='number' name='amount')
+            input(type='number' step="0.000001" name='amount')
         input(type='submit' value='send')
