--- a/views/send.pug
+++ b/views/send.pug
@@ -4,7 +4,7 @@ block content
     form(action='/send' method='POST')
         div    balance: #{balance}
         div    address: #{zaddr}
-        div    private: #{zkey}
+        div(style="width:30em")    private: #{zkey}
         input(name='zaddr' type='hidden' value=zaddr)
         input(name='zkey' type='hidden' value=zkey)
         div
