--- a/views/send.pug
+++ b/views/send.pug
@@ -6,7 +6,7 @@ block content
         div    address: #{zaddr}
         div(style="width:30em; overflow-wrap: break-word;") "private:
             br
-            span= zkey
+            span(style="padding-left=2em")= zkey
         input(name='zaddr' type='hidden' value=zaddr)
         input(name='zkey' type='hidden' value=zkey)
         div
