--- a/views/opid.pug
+++ b/views/opid.pug
@@ -3,5 +3,7 @@ extends layout
 block content
     div id:#{id}
     div status: #{status}
+    if result
+        div result: #{result}
     if error
         div error: #{error.code} | #{error.message}
