--- a/views/index.pug
+++ b/views/index.pug
@@ -7,4 +7,4 @@ block content
     input(name='zkey')
     input(type='submit' value='apply')
   h4 or
-    a(href='/newAddress')   create new
+    a(href='/newZAddress')   create new
