--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,5 @@ block content
     input(type='submit' value='apply')
   h4 or
     a(href='/newZAddress')   create new Z
+    span or
     a(href='/newTAddress')   create new T
