--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -98,6 +98,8 @@ h2
 	width: 100%;
 	margin: 1.5rem 0;
 	padding: 3rem 0;
+	outline: none;
+	border: 0;
 	border-radius: 1rem;
 	text-align: center;
 	font-size: 2.5rem;
@@ -108,7 +110,7 @@ h2
 	.button
 	{
 		font-size: 2.25rem;
-	}	
+	}
 }
 .button_orange
 {
@@ -127,7 +129,7 @@ h2
 .button_underline span
 {
 	padding: 1rem 0;
-	border-bottom: 1px dashed #FFFFFF;	
+	border-bottom: 1px dashed #FFFFFF;
 }
 textarea
 {
@@ -149,14 +151,14 @@ textarea::placeholder {
 color: #626262
 }
 
-textarea:-moz-placeholder { 
-color: #626262 
+textarea:-moz-placeholder {
+color: #626262
 }
 
-textarea::-moz-placeholder {  
-color: #626262;  
+textarea::-moz-placeholder {
+color: #626262;
 }
 
 textarea:-ms-input-placeholder {
-color: #626262 
+color: #626262
 }
