--- a/views/commonscripts.ejs
+++ b/views/commonscripts.ejs
@@ -2,4 +2,5 @@
 <script type="text/javascript" src="scripts/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
 <link rel="stylesheet" type="text/css" href="stylesheets/grid.min.css" />
+<link rel="stylesheet" type="text/css" href="stylesheets/fonts.css" />
 <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
