--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><%= title %></title>
+		<title>ZKB</title>
 		<%- include('commonscripts'); %>
 		<link rel="stylesheet" type="text/css" href="stylesheets/firstscreen.css" />
 	</head>
