--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>ZKB</title>
-		<%- include('commonscripts'); %>
+		<title><%= title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script type="text/javascript" src="scripts/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/grid.min.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
 		<link rel="stylesheet" type="text/css" href="stylesheets/firstscreen.css" />
 	</head>
 	<body>
