--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,24 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(async src="https://www.googletagmanager.com/gtag/js?id=UA-131331767-1")
+    script( type="text/javascript" ).
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-131331767-1');
+      (function (m, e, t, r, i, k, a){m[i] = m[i] || function () {
+        (m[i].a = m[i].a || []).push(arguments)
+      };
+      m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r, a.parentNode.insertBefore(k,a)})
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+      ym(51707000, "init", {
+        id:51707000,
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+      });
   body
     img(src='/images/logo.svg' style='height:5em; margin:auto')
     block content
