--- a/views/wallet.ejs
+++ b/views/wallet.ejs
@@ -14,12 +14,12 @@
 				<div class="container">
 					<div class="row flex-row align-items-center">
 						<div class="col">
-							<img src="img/logo-white.svg" class="logo">
+							<img src="/img/logo-white.svg" class="logo">
 						</div>
 						<div class="col d-none d-md-block">
 							<div class="balance-desktop">
 								Balance<br />
-								<span class="balance-desktop_amount"><%= balance %></span>
+								<span class="balance-desktop_amount"><%= balance %> ZEC</span>
 							</div>
 						</div>
 					</div>
