--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,11 @@
 		<title><%= title %></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script type="text/javascript" src="scripts/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/grid.min.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/fonts.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
-		<link rel="stylesheet" type="text/css" href="stylesheets/firstscreen.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/grid.min.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/fonts.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/firstscreen.css" />
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131331767-1"></script>
 		<script type="text/javascript" >
 			(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -50,15 +50,15 @@
 									</p>
 
 									<ul>
+                    <li><strong>Privacy</strong> by design</li>
 										<li>Forever <strong>free</strong></li>
-										<li><strong>Privacy</strong> by design</li>
 										<li><strong>No KYC</strong></li>
 									</ul>
 								</div>
 							</div>
 							<div class="mobile_buttons d-flex d-lg-none">
 								<div>
-									<a class="button button_orange d-block d-lg-none" href="/newwallet">Generate Z-wallet</a>
+									<a class="button button_orange d-block d-lg-none" href="/newZAddress">Generate Z-wallet</a>
 									<a class="button button_underline d-block d-lg-none" data-modal-open="1"><span>Use existing private key</span></a>
 								</div>
 							</div>
@@ -68,7 +68,7 @@
 				<div class="col welcome-screen_form d-none d-lg-block">
 					<div class="container">
 						<section class="form">
-							<h2>Sign in to your wallet</h2>
+							<h2>Sign in to your ZCash wallet</h2>
 							<nav class="form_nav" >
 								<a class="selected" data-tab-open-group="form_tabs" data-tab-open="create">Create a new wallet</a>
 								<a data-tab-open-group="form_tabs" data-tab-open="useex">Use a private key</a>
