--- a/views/wallet.ejs
+++ b/views/wallet.ejs
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Home Page</title>
+		<title><%= title %></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/grid.min.css" />
