--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title><%= title %></title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script type="text/javascript" src="scripts/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/grid.min.css" />
