--- a/views/wallet.ejs
+++ b/views/wallet.ejs
@@ -15,7 +15,9 @@
 				<div class="container">
 					<div class="row flex-row align-items-center">
 						<div class="col">
-							<img src="/img/logo-white.svg" class="logo">
+              <a href="https://www.zkbank.org/">
+                <img src="/img/logo-white.svg" class="logo">
+              </a>
 						</div>
 						<div class="col d-none d-md-block">
 							<div class="balance-desktop">
