--- a/views/wallet.ejs
+++ b/views/wallet.ejs
@@ -5,6 +5,7 @@
 		<title><%= title %></title>
 		<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/grid.min.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/wallet.css" />
 		<script type="text/javascript" src="/scripts/jquery.min.js"></script>
