--- a/public/stylesheets/wallet.css
+++ b/public/stylesheets/wallet.css
@@ -2,6 +2,7 @@ body
 {
 	position: relative;
 	z-index: 0;
+	min-height: 100%;
 	background-color: #252525;
 }
 body:before
@@ -25,16 +26,7 @@ body:before
 }
 header
 {
-	flex-grow: 0;
-	padding: 4rem 0;
-}
-main
-{
-	flex-grow: 1;
-}
-footer
-{
-	flex-grow: 0;
+	padding: 5rem 0;
 }
 .logo
 {
@@ -49,7 +41,7 @@ footer
 		display: block;
 		margin: 0;
 		height: 11rem;
-	}
+	}	
 }
 .balance-desktop,
 .balance-mobile
@@ -125,6 +117,7 @@ footer
 }
 .info_head
 {
+	width: 100%;
 	border-radius: 1rem 1rem 0 0;
 	background-color: #222222;
 	padding: 3.5rem;
@@ -137,7 +130,7 @@ footer
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	list-style-type: none;
+	list-style-type: none;	
 }
 .form_container > li
 {
@@ -156,7 +149,7 @@ footer
 	.data-form_container
 	{
 		padding-left: 6rem;
-	}
+	}	
 }
 label
 {
@@ -173,12 +166,18 @@ label
 }
 footer
 {
-	padding: 6rem 0 6rem 0;
+	padding: 5rem 0 6rem 0;
 	text-align: center;
 }
+/*@media(min-width: 768px)
+{
+	footer
+	{
+		padding: 6rem 0;
+	}
+}*/
 footer p
 {
-	line-height: 4rem;
 	color: #949494;
 }
 footer p a
