--- a/views/opid.ejs
+++ b/views/opid.ejs
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
 		<title>Transaction - Zero-Knowlegde Bank</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="/css/grid.min.css" />
-		<link rel="stylesheet" type="text/css" href="/css/main.css" />
-		<link rel="stylesheet" type="text/css" href="/css/cabinet.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/grid.min.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/cabinet.css" />
 		<script type="text/javascript" src="/scripts/jquery.min.js"></script>
 		<style type="text/css">
 				body
@@ -147,7 +147,7 @@
 				<div class="container">
 					<div class="row flex-row align-items-center">
 						<div class="col">
-							<img src="images/logo-white.svg" class="logo">
+							<img src="/img/logo-white.svg" class="logo">
 						</div>
 						<div class="col d-none d-md-block">
 							<div class="txstatus_help">
@@ -181,7 +181,7 @@
 
                 <% } else if(status == 'success') { %>
 
-                    <img src="img/success.svg" class="txstatus_statusimg">
+                    <img src="/img/success.svg" class="txstatus_statusimg">
                     <h1>Transaction: <span class="selection_success">Success</span></h1>
                     <p>
   										Link on Zcha.in<br />
@@ -192,7 +192,7 @@
 
                 <% } else if(status == 'failed') { %>
 
-									<img src="img/error.svg" class="txstatus_statusimg">
+									<img src="/img/error.svg" class="txstatus_statusimg">
 									<h1>Transaction: <span class="selection_error">Error</span></h1>
 									<p>
 										<span class="selection_error">Error type:</span><br />
