--- a/views/opid.ejs
+++ b/views/opid.ejs
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/grid.min.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/cabinet.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/wallet.css" />
 		<script type="text/javascript" src="/scripts/jquery.min.js"></script>
 		<style type="text/css">
 				body
