mobile button etc 1

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,6 +60,7 @@
 							<div class="mobile_buttons d-flex d-lg-none">
 								<div>
 									<a class="button button_orange d-block d-lg-none" href="/newZAddress">Generate Z-wallet</a>
+                  <a class="button button_green d-block d-lg-none" href="/newZAddress">Generate T-wallet</a>
 									<a class="button button_underline d-block d-lg-none" data-modal-open="1"><span>Use existing private key</span></a>
 								</div>
 							</div>
@@ -72,17 +73,24 @@
 							<h2>Sign in to your ZCash wallet</h2>
 							<nav class="form_nav" >
 								<a class="selected" data-tab-open-group="form_tabs" data-tab-open="create">Create a new wallet</a>
-								<a data-tab-open-group="form_tabs" data-tab-open="useex">Use a private key</a>
+								<a data-tab-open-group="form_tabs" data-tab-open="zwall">Log in (Z-address)</a>
+                <a data-tab-open-group="form_tabs" data-tab-open="twall">Log in (T-address)</a>
 							</nav>
 							<ul class="form_tabs" data-tab-group="form_tabs">
 								<li data-tab="create">
 									<a class="button button_orange" href="/newZAddress">Generate a wallet</a>
 								</li>
-								<li data-tab="useex">
+								<li data-tab="zwall">
                   <form action="/open">
   									<textarea id="public_address" name="zaddr" class="textarea_privkey" placeholder="Public Address (starting with &quot;z&quot;)" rows="3"  autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
   									<textarea id="private_key"  name="zkey" class="textarea_privkey" placeholder="Private key" rows="3" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
-  									<button type="submit" class="button button_orange">Continue with this wallet</button>
+  									<button type="submit" class="button button_orange">Log in to your Z-wallet</button>
+                  </form>
+								</li>
+                <li data-tab="twall">
+                  <form action="/open">
+  									<textarea id="private_key"  name="zkey" class="textarea_privkey" placeholder="Private key" rows="3" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
+  									<button type="submit" class="button button_orange">Log in to your T-wallet</button>
                   </form>
 								</li>
 							</ul>
