--- a/views/opid.ejs
+++ b/views/opid.ejs
@@ -186,7 +186,7 @@
                     <p>
   										Link on Zcha.in<br />
                       (may not work until the transaction is in a block)<br />
-  										<a class="tx_link" href="https://explorer.zcha.in/transactions/<%= result.txid %>">https://explorer.zcha.in/transactions/<%= result.txid %></a>
+  										<a class="tx_link" href="https://explorer.zcha.in/transactions/<%= result.txid %>" target="_blank">https://explorer.zcha.in/transactions/<%= result.txid %></a>
   									</p>
 	                  <a class="button button_green button_back" href="#" onclick="window.history.back();">Go back to your wallet</a>
 
