--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@
 							<ul class="form_tabs" data-tab-group="form_tabs">
 								<li data-tab="create">
 									<a class="button button_orange" href="/newZAddress">Generate a private Z-wallet</a>
-                  <a class="button button_green d-block d-lg-none" href="/newZAddress">Generate T-wallet</a>
+                  <a class="button button_green" href="/newZAddress">Generate T-wallet</a>
 								</li>
 								<li data-tab="zwall">
                   <form action="/open">
@@ -107,15 +107,15 @@
           <form action="/open">
 					  <h2>Sign in with your private key</h2>
             <nav class="form_nav" >
-              <a class="selected" data-tab-open-group="mob_form_tabs" data-tab-open="zwall">Z-Wallet</a>
-              <a data-tab-open-group="mob_form_tabs" data-tab-open="twall">T-Wallet</a>
+              <a class="selected" data-tab-open-group="mob_form_tabs" data-tab-open="mob_zwall">Z-Wallet</a>
+              <a data-tab-open-group="mob_form_tabs" data-tab-open="mob_zwall">T-Wallet</a>
             </nav>
             <ul class="form_tabs" data-tab-group="mob_form_tabs">
-              <li data-tab="zwall">
+              <li data-tab="mob_zwall">
                 <textarea id="public_address_mob" name="zaddr" class="textarea_privkey" placeholder="Public Address (starting with &quot;z&quot;)" rows="3" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
       					<textarea id="private_key_mob"  name="zkey" class="textarea_privkey" placeholder="Private key" rows="3" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
               </li>
-              <li data-tab="twall">
+              <li data-tab="mob_zwall">
                 	<textarea id="private_key_mob"  name="zkey" class="textarea_privkey" placeholder="Private key" rows="3" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
               </li>
             </ul>
