--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,7 +105,7 @@
 				<div class="overlay_x" data-modal-close="1"></div>
 				<div class="container overlay_container">
           <form action="/open">
-					  <h2>Sign in with your private key</h2>
+					  <h2>Sign in with <nobr>your private key</nobr></h2>
             <nav class="form_nav" >
               <a class="selected" data-tab-open-group="mob_form_tabs" data-tab-open="mob_zwall">Z-Wallet</a>
               <a data-tab-open-group="mob_form_tabs" data-tab-open="mob_zwall">T-Wallet</a>
