--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,7 +106,7 @@
 				<div class="container overlay_container">
           <form action="/open">
 					  <h2>Sign in with <nobr>your private key</nobr></h2>
-            <nav class="form_nav" >
+            <nav class="form_nav">
               <a class="selected" data-tab-open-group="mob_form_tabs" data-tab-open="mob_zwall">Z-Wallet</a>
               <a data-tab-open-group="mob_form_tabs" data-tab-open="mob_zwall">T-Wallet</a>
             </nav>
@@ -115,7 +115,7 @@
                 <textarea id="public_address_mob" name="zaddr" class="textarea_privkey" placeholder="Public Address (starting with &quot;z&quot;)" rows="3" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
       					<textarea id="private_key_mob"  name="zkey" class="textarea_privkey" placeholder="Private key" rows="3" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
               </li>
-              <li data-tab="mob_zwall">
+              <li data-tab="mob_twall">
                 	<textarea id="private_key_mob"  name="zkey" class="textarea_privkey" placeholder="Private key" rows="3" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
               </li>
             </ul>
