--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
 							<div class="mobile_buttons d-flex d-lg-none">
 								<div>
 									<a class="button button_orange d-block d-lg-none" href="/newZAddress">Generate a private Z-wallet</a>
-                  <a class="button button_green d-block d-lg-none" href="/newZAddress">Generate T-wallet</a>
+                  <a class="button button_orange d-block d-lg-none" href="/newZAddress">Generate T-wallet</a>
 									<a class="button button_underline d-block d-lg-none" data-modal-open="1"><span>Use existing private key</span></a>
 								</div>
 							</div>
@@ -79,7 +79,7 @@
 							<ul class="form_tabs" data-tab-group="form_tabs">
 								<li data-tab="create">
 									<a class="button button_orange" href="/newZAddress">Generate a private Z-wallet</a>
-                  <a class="button button_green" href="/newZAddress">Generate T-wallet</a>
+                  <a class="button button_orange" href="/newZAddress">Generate T-wallet</a>
 								</li>
 								<li data-tab="zwall">
                   <form action="/open">
@@ -108,7 +108,7 @@
 					  <h2>Sign in with <nobr>your private key</nobr></h2>
             <nav class="form_nav">
               <a class="selected" data-tab-open-group="mob_form_tabs" data-tab-open="mob_zwall">Z-Wallet</a>
-              <a data-tab-open-group="mob_form_tabs" data-tab-open="mob_zwall">T-Wallet</a>
+              <a data-tab-open-group="mob_form_tabs" data-tab-open="mob_twall">T-Wallet</a>
             </nav>
             <ul class="form_tabs" data-tab-group="mob_form_tabs">
               <li data-tab="mob_zwall">
