--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@
 							<ul class="form_tabs" data-tab-group="form_tabs">
 								<li data-tab="create">
 									<a class="button button_orange" href="/newZAddress">Generate a private Z-wallet</a>
-                  <a class="button button_orange" href="/newZAddress">Generate T-wallet</a>
+                  <a class="button button_orange" href="/newTAddress">Generate T-wallet</a>
 								</li>
 								<li data-tab="zwall">
                   <form action="/open">
