--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
 							<div class="mobile_buttons d-flex d-lg-none">
 								<div>
 									<a class="button button_orange d-block d-lg-none" href="/newZAddress">Generate a private Z-wallet</a>
-                  <a class="button button_darkorange d-block d-lg-none" href="/newZAddress">Generate T-wallet</a>
+                  <a class="button button_darkorange d-block d-lg-none" href="/newTAddress">Generate T-wallet</a>
 									<a class="button button_underline d-block d-lg-none" data-modal-open="1"><span>Use existing private key</span></a>
 								</div>
 							</div>
