--- a/views/opid.ejs
+++ b/views/opid.ejs
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/grid.min.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
 		<link rel="stylesheet" type="text/css" href="/stylesheets/wallet.css" />
 		<script type="text/javascript" src="/scripts/jquery.min.js"></script>
