--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
 							<div class="mobile_buttons d-flex d-lg-none">
 								<div>
 									<a class="button button_orange d-block d-lg-none" href="/newZAddress">Generate a private Z-wallet</a>
-                  <a class="button button_darkorange d-block d-lg-none" href="/newTAddress">Generate T-wallet</a>
+                  <a class="button button_darkorange d-block d-lg-none" href="/newTAddress">Generate a T-wallet</a>
 									<a class="button button_underline d-block d-lg-none" data-modal-open="1"><span>Use existing private key</span></a>
 								</div>
 							</div>
@@ -79,7 +79,7 @@
 							<ul class="form_tabs" data-tab-group="form_tabs">
 								<li data-tab="create">
 									<a class="button button_orange" href="/newZAddress">Generate a private Z-wallet</a>
-                  <a class="button button_darkorange" href="/newTAddress">Generate T-wallet</a>
+                  <a class="button button_darkorange" href="/newTAddress">Generate a T-wallet</a>
 								</li>
 								<li data-tab="zwall">
                   <form action="/open">
