--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,4 +16,5 @@
     <% scripts.forEach(function(script) { %>
         <script type="text/javascript" src="scripts/<%= script %>.js"></script>
     <% }); %>
-	<!--	<link rel="stylesheet" type="text/css" href="/stylesheets/firstscreen.css" />-->
+  </head>
+  <body>
