--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,3 +1,3 @@
-<% include('partials/header') %>
+<% include('partials/header', {  styles:['wallet'], scripts:['main', 'qrcode'] }) %>
 KEK
 <% include('partials/footer') %>
