--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,5 +16,6 @@
     <% scripts.forEach(function(script) { %>
         <script type="text/javascript" src="scripts/<%= script %>.js"></script>
     <% }); %>
+		<%- include('partials/metrics') %>
   </head>
   <body>
