--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,5 @@
+<% scripts.forEach(function(script) { %>
+    <script type="text/javascript" src="scripts/<%= script %>.js"></script>
+<% }); %>
   </body>
 </html>
