--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,37 +1,4 @@
-<!DOCTYPE html>
-<html>
-	<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title><%= title %></title>
-		<script type="text/javascript" src="scripts/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/grid.min.css" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/fonts.css" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
-		<link rel="stylesheet" type="text/css" href="/stylesheets/firstscreen.css" />
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131331767-1"></script>
-		<script type="text/javascript" >
-			(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-				m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-			ym(51707000, "init", {
-				id:51707000,
-				clickmap:true,
-				trackLinks:true,
-				accurateTrackBounce:true,
-				webvisor:true
-			});
-
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-
-			gtag('config', 'UA-131331767-1');
-		</script>
-	</head>
-	<body>
+<%- include('partials/header', {title:'Zero-Knowledge Bank', styles:['firstscreen'], scripts:[] }) %>
 		<div class="container-fluid welcome-screen">
 			<div class="row">
 				<div class="col welcome-screen_desc">
@@ -125,5 +92,4 @@
 			</div>
 		</div>
 	<script type="text/javascript" src="scripts/main.js"></script>
-	</body>
-</html>
+<%- include('partials/footer', {scripts: 'main'}) %>
