--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,4 +92,5 @@
 			</div>
 		</div>
 	<script type="text/javascript" src="scripts/main.js"></script>
-<%- include('partials/footer', {scripts: 'main'}) %>
+</body>
+</html>
