--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,6 +91,4 @@
 				</div>
 			</div>
 		</div>
-	<script type="text/javascript" src="scripts/main.js"></script>
-</body>
-</html>
+<%- include('partials/footer', {scripts: ['main']}) %>
